sqlite3_connection_pool/lib/src/ffi.g.dart

// ignore_for_file: type=lint
// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import, unused_element, deprecated_member_use_from_same_package
@ffi.DefaultAsset(
  'package:sqlite3_connection_pool/sqlite3_connection_pool.dart',
)
library;

import 'dart:ffi' as ffi;
import '' as self;

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ConnectionPool>,
    ffi.UintPtr,
    ffi.Pointer<ffi.Pointer<ffi.Void>>,
  )
>()
external void pkg_sqlite3_connection_pool_add_readers(
  ffi.Pointer<ConnectionPool> pool,
  int count,
  ffi.Pointer<ffi.Pointer<ffi.Void>> reads,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ConnectionPool>)>()
external void pkg_sqlite3_connection_pool_close(
  ffi.Pointer<ConnectionPool> pool,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<PoolRequest>)>()
external void pkg_sqlite3_connection_pool_notify_updates(
  ffi.Pointer<PoolRequest> request,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ConnectionPool>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Size,
  )
>()
external void pkg_sqlite3_connection_pool_notify_updates_custom(
  ffi.Pointer<ConnectionPool> request,
  ffi.Pointer<ffi.Pointer<ffi.Char>> updates,
  int updates_count,
);

@ffi.Native<
  ffi.Pointer<PoolRequest> Function(
    ffi.Pointer<ConnectionPool>,
    ffi.Int64,
    ffi.Int64,
  )
>(isLeaf: true)
external ffi.Pointer<PoolRequest> pkg_sqlite3_connection_pool_obtain_exclusive(
  ffi.Pointer<ConnectionPool> pool,
  int tag,
  int port,
);

@ffi.Native<
  ffi.Pointer<PoolRequest> Function(
    ffi.Pointer<ConnectionPool>,
    ffi.Int64,
    ffi.Int64,
    ffi.Char,
  )
>(isLeaf: true)
external ffi.Pointer<PoolRequest> pkg_sqlite3_connection_pool_obtain_single(
  ffi.Pointer<ConnectionPool> pool,
  int tag,
  int port,
  int read,
);

@ffi.Native<
  ffi.Pointer<ConnectionPool> Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.UintPtr,
    ffi.Pointer<ffi.NativeFunction<ffi.Pointer<InitializedPool> Function()>>,
  )
>()
external ffi.Pointer<ConnectionPool> pkg_sqlite3_connection_pool_open(
  ffi.Pointer<ffi.Uint8> name,
  int name_len,
  ffi.Pointer<ffi.NativeFunction<ffi.Pointer<InitializedPool> Function()>>
  initialize,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ConnectionPool>,
    ffi.Pointer<ffi.Pointer<PoolConnection>>,
    ffi.Pointer<ffi.Pointer<PoolConnection>>,
    ffi.UintPtr,
  )
>()
external void pkg_sqlite3_connection_pool_query_connections(
  ffi.Pointer<ConnectionPool> pool,
  ffi.Pointer<ffi.Pointer<PoolConnection>> writer,
  ffi.Pointer<ffi.Pointer<PoolConnection>> readers,
  int reader_count,
);

@ffi.Native<ffi.UintPtr Function(ffi.Pointer<ConnectionPool>)>()
external int pkg_sqlite3_connection_pool_query_read_connection_count(
  ffi.Pointer<ConnectionPool> pool,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<PoolRequest>)>()
external void pkg_sqlite3_connection_pool_request_close(
  ffi.Pointer<PoolRequest> request,
);

@ffi.Native<
  ffi.Pointer<ffi.Void> Function(
    ffi.Pointer<PoolConnection>,
    ffi.Pointer<ffi.Uint8>,
    ffi.UintPtr,
  )
>(isLeaf: true)
external ffi.Pointer<ffi.Void> pkg_sqlite3_connection_pool_stmt_cache_get(
  ffi.Pointer<PoolConnection> connection,
  ffi.Pointer<ffi.Uint8> sql,
  int sql_len,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<PoolConnection>,
    ffi.Pointer<ffi.Uint8>,
    ffi.UintPtr,
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>,
  )
>(isLeaf: true)
external int pkg_sqlite3_connection_pool_stmt_cache_put(
  ffi.Pointer<PoolConnection> connection,
  ffi.Pointer<ffi.Uint8> sql,
  int sql_len,
  ffi.Pointer<ffi.Void> stmt,
  ffi.Pointer<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>
  sqlite3_finalize,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ConnectionPool>, ffi.Int, ffi.Int64)
>()
external void pkg_sqlite3_connection_pool_update_listener(
  ffi.Pointer<ConnectionPool> pool,
  int add,
  int listener,
);

const addresses = _SymbolAddresses();

class _SymbolAddresses {
  const _SymbolAddresses();
  ffi.Pointer<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ConnectionPool>)>
  >
  get pkg_sqlite3_connection_pool_close =>
      ffi.Native.addressOf(self.pkg_sqlite3_connection_pool_close);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PoolRequest>)>>
  get pkg_sqlite3_connection_pool_request_close =>
      ffi.Native.addressOf(self.pkg_sqlite3_connection_pool_request_close);
}

final class ConnectionPool extends ffi.Opaque {}

final class ExternalFunctions extends ffi.Struct {
  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<ffi.Void>,
      )
    >
  >
  sqlite3_update_hook;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<ffi.Void>,
      )
    >
  >
  sqlite3_commit_hook;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<ffi.Void>,
      )
    >
  >
  sqlite3_rollback_hook;

  external ffi.Pointer<
    ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>
  >
  sqlite3_get_autocommit;

  external ffi.Pointer<
    ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>
  >
  sqlite3_finalize;

  external ffi.Pointer<
    ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>
  >
  sqlite3_close_v2;

  external ffi.Pointer<
    ffi.NativeFunction<ffi.Int Function(ffi.Int64, ffi.Pointer<ffi.Void>)>
  >
  dart_post_c_object;

  static ffi.Pointer<ExternalFunctions> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Void>,
        )
      >
    >
    sqlite3_update_hook,
    required ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Void>,
        )
      >
    >
    sqlite3_commit_hook,
    required ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Void>,
        )
      >
    >
    sqlite3_rollback_hook,
    required ffi.Pointer<
      ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>
    >
    sqlite3_get_autocommit,
    required ffi.Pointer<
      ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>
    >
    sqlite3_finalize,
    required ffi.Pointer<
      ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>
    >
    sqlite3_close_v2,
    required ffi.Pointer<
      ffi.NativeFunction<ffi.Int Function(ffi.Int64, ffi.Pointer<ffi.Void>)>
    >
    dart_post_c_object,
  }) => $allocator<ExternalFunctions>()
    ..ref.sqlite3_update_hook = sqlite3_update_hook
    ..ref.sqlite3_commit_hook = sqlite3_commit_hook
    ..ref.sqlite3_rollback_hook = sqlite3_rollback_hook
    ..ref.sqlite3_get_autocommit = sqlite3_get_autocommit
    ..ref.sqlite3_finalize = sqlite3_finalize
    ..ref.sqlite3_close_v2 = sqlite3_close_v2
    ..ref.dart_post_c_object = dart_post_c_object;
}

final class InitializedPool extends ffi.Struct {
  external ExternalFunctions functions;

  external ffi.Pointer<ffi.Void> write;

  external ffi.Pointer<ffi.Pointer<ffi.Void>> reads;

  @ffi.UintPtr()
  external int read_count;

  @ffi.UintPtr()
  external int prepared_statement_cache_size;

  @ffi.UnsignedChar()
  external int enable_update_hooks;
}

final class PoolConnection extends ffi.Struct {
  external ffi.Pointer<ffi.Void> raw;

  static ffi.Pointer<PoolConnection> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Void> raw,
  }) => $allocator<PoolConnection>()..ref.raw = raw;
}

final class PoolRequest extends ffi.Opaque {}
